heading and button spacing fixes

--- a/grunt/sass/components/_chef.sass
+++ b/grunt/sass/components/_chef.sass
@@ -5,7 +5,9 @@
 	background-size: 40%
 	padding-bottom: 50px
 	background-repeat: no-repeat
-	
+	padding-top: 1px
+	height: 100%
+
 	blockquote
 		width: 50%
 	.chefGreg
@@ -18,9 +20,9 @@
 
 // Mobile styling
 @media screen and (max-width: 768px)
-	.chefPage 
+	.chefPage
 		background-image: none
-	
+
 		blockquote
 			width: 100%
 
